# mathematical-modeling-collection

./: .gitignore  LICENSE  README.md  main.py  matplotlibrc  pyproject.toml
ComprehensiveEvaluation/: DEA.py  GRA.py  MFCE.py  RSR.py  TOPSIS.py  base.py
ComprehensiveEvaluation/Weighting/: AHP.py  Entropy.py
MultivariateAnalysis/: cluster_analysis.py  pca.py  reference.py
MultivariateAnalysis/example_data/: development_of_higher_education.xlsx
analysis/: SA.py
model_analysis/: SA.py
optimization/: lp.py
optimization/IntelligentOptimization/: SAA.py
optimization/IntelligentOptimization/example/: SAA_example.py
utils/: interpolation_fitting.py
utils/example_data/: interp2D.txt
