[project]
name = "mcm"
version = "0.1.0"
description = "Toolbox for CUMCM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "statsmodels>=0.14.5",
    "salib>=1.5.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.5",
    "scipy>=1.16.1",
    "numpy>=2.3.2",
    "cvxpy[glpk]>=1.7.1",
    "polars>=1.32.0",
]

[dependency-groups]
dev = [
    "marimo[lsp]>=0.14.16",
]
